--- a/day1/index.html
+++ b/day1/index.html
@@ -1,14 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day-1: FAQ</title>
 
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Day 1</h1>
-    <script src="script.js"></script>  
-</body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="faq-container">
+      <h1>Frequently Asked Questions</h1>
+      <div class="faq">
+        <div class="faq-contains">
+          <div class="question">
+            <h2>What is HTML?</h2>
+            <div class="button">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                </svg>
+            </div>
+          </div>
+        </div>
+        <div class="answer">
+          <p>
+            HTML stands for Hyper Text Markup Language. It is the standard
+            markup language for creating Web pages. It describes the structure
+            of a Web page.
+          </p>
+        </div>
+        <div class="faq-contains">
+          <div class="question">
+            <h2>What is HTML?</h2>
+            <div class="button">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                </svg>
+            </div>
+          </div>
+        </div>
+        <div class="answer">
+          <p>
+            HTML stands for Hyper Text Markup Language. It is the standard
+            markup language for creating Web pages. It describes the structure
+            of a Web page.
+          </p>
+        </div>
+        <div class="faq-contains">
+          <div class="question">
+            <h2>What is HTML?</h2>
+            <div class="button">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                </svg>
+            </div>
+          </div>
+        </div>
+        <div class="answer">
+          <p>
+            HTML stands for Hyper Text Markup Language. It is the standard
+            markup language for creating Web pages. It describes the structure
+            of a Web page.
+          </p>
+        </div>
+        <div class="faq-contains">
+          <div class="question">
+            <h2>What is HTML?</h2>
+            <div class="button">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                </svg>
+            </div>
+          </div>
+        </div>
+        <div class="answer">
+          <p>
+            HTML stands for Hyper Text Markup Language. It is the standard
+            markup language for creating Web pages. It describes the structure
+            of a Web page.
+          </p>
+        </div>
+        <div class="faq-contains">
+          <div class="question">
+            <h2>What is HTML?</h2>
+            <div class="button">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                </svg>
+            </div>
+          </div>
+        </div>
+        <div class="answer">
+          <p>
+            HTML stands for Hyper Text Markup Language. It is the standard
+            markup language for creating Web pages. It describes the structure
+            of a Web page.
+          </p>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
