--- a/day1/index.html
+++ b/day1/index.html
@@ -1,103 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day-1: FAQ</title>
-
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Development FAQ</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <div class="faq-container">
-      <h1>Frequently Asked Questions</h1>
-      <div class="faq">
-        <div class="faq-contains">
-          <div class="question">
-            <h2>What is HTML?</h2>
-            <div class="button">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
-                </svg>
+        <h1>Frequently Asked Questions</h1>
+        <div class="faq">
+            <div class="faq-contain">
+                <div class="question">
+                    <h2>What is HTML?</h2>
+                    <div class="button">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="answer">
+                    <p>HTML stands for HyperText Markup Language. It is the standard markup language for creating web pages and web applications.</p>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="answer">
-          <p>
-            HTML stands for Hyper Text Markup Language. It is the standard
-            markup language for creating Web pages. It describes the structure
-            of a Web page.
-          </p>
-        </div>
-        <div class="faq-contains">
-          <div class="question">
-            <h2>What is HTML?</h2>
-            <div class="button">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
-                </svg>
+            <div class="faq-contain">
+                <div class="question">
+                    <h2>What is CSS?</h2>
+                    <div class="button">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="answer">
+                    <p>CSS stands for Cascading Style Sheets. It is used to style and layout web pages, including the design, layout, and variations in display for different devices and screen sizes.</p>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="answer">
-          <p>
-            HTML stands for Hyper Text Markup Language. It is the standard
-            markup language for creating Web pages. It describes the structure
-            of a Web page.
-          </p>
-        </div>
-        <div class="faq-contains">
-          <div class="question">
-            <h2>What is HTML?</h2>
-            <div class="button">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
-                </svg>
+            <div class="faq-contain">
+                <div class="question">
+                    <h2>What is JavaScript?</h2>
+                    <div class="button">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="answer">
+                    <p>JavaScript is a programming language that allows you to implement complex features on web pages, such as interactive content, animations, and dynamic updates.</p>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="answer">
-          <p>
-            HTML stands for Hyper Text Markup Language. It is the standard
-            markup language for creating Web pages. It describes the structure
-            of a Web page.
-          </p>
-        </div>
-        <div class="faq-contains">
-          <div class="question">
-            <h2>What is HTML?</h2>
-            <div class="button">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
-                </svg>
-            </div>
-          </div>
-        </div>
-        <div class="answer">
-          <p>
-            HTML stands for Hyper Text Markup Language. It is the standard
-            markup language for creating Web pages. It describes the structure
-            of a Web page.
-          </p>
-        </div>
-        <div class="faq-contains">
-          <div class="question">
-            <h2>What is HTML?</h2>
-            <div class="button">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
-                </svg>
-            </div>
-          </div>
-        </div>
-        <div class="answer">
-          <p>
-            HTML stands for Hyper Text Markup Language. It is the standard
-            markup language for creating Web pages. It describes the structure
-            of a Web page.
-          </p>
-        </div>
-      </div>
     </div>
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
