day-1 final stage

--- a/day1/index.html
+++ b/day1/index.html
@@ -49,6 +49,45 @@
                     <p>JavaScript is a programming language that allows you to implement complex features on web pages, such as interactive content, animations, and dynamic updates.</p>
                 </div>
             </div>
+            <div class="faq-contain">
+                <div class="question">
+                    <h2>What is Node.js?</h2>
+                    <div class="button">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="answer">
+                    <p>Node.js is a JavaScript runtime built on Chrome's V8 JavaScript engine, enabling server-side scripting and creating scalable network applications.</p>
+                </div>
+            </div>
+            <div class="faq-contain">
+                <div class="question">
+                    <h2>What is React?</h2>
+                    <div class="button">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="answer">
+                    <p>React is a JavaScript library for building user interfaces. It allows developers to create large web applications that can update and render efficiently in response to data changes.</p>
+                </div>
+            </div>
+            <div class="faq-contain">
+                <div class="question">
+                    <h2>What is a DOM?</h2>
+                    <div class="button">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M12 19l-7-7h14l-7 7z" fill="currentColor"/>
+                        </svg>
+                    </div>
+                </div>
+                <div class="answer">
+                    <p>The Document Object Model (DOM) is a programming interface for web documents. It represents the page so that programs can change the document structure, style, and content.</p>
+                </div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
