--- a/day2-Product_Design_Cart/index.html
+++ b/day2-Product_Design_Cart/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
- <h1>Product Design Cart</h1>   
+    <div class="product-card">
+        <img src="https://static-01.daraz.com.np/p/0c1b1a4c3c4ac7b1a7ee84fddf746e93.jpg" alt="Product Image" class="product-image">
+        <div class="product-info">
+            <h2 class="product-name">Black Leather Classic Martin Boots For Men</h2>
+            <p class="product-description">This is a short description of the product. It highlights the key features and benefits.</p>
+            <div class="price-details">
+                <p class="product-price">$99.99</p>
+                <button class="details-button">View Details</button>
+            </div>
+           
+        </div>
+    </div> 
  <script src="script.js"></script>
 </body>
 </html>
