--- a/day2-Product_Design_Cart/index.html
+++ b/day2-Product_Design_Cart/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="product-card">
+        <div class="brand-new-tag">Brand New</div>
         <img src="https://static-01.daraz.com.np/p/0c1b1a4c3c4ac7b1a7ee84fddf746e93.jpg" alt="Product Image" class="product-image">
         <div class="product-info">
             <h2 class="product-name">Black Leather Classic Martin Boots For Men</h2>
@@ -16,7 +17,6 @@
                 <p class="product-price">$99.99</p>
                 <button class="details-button">View Details</button>
             </div>
-           
         </div>
     </div> 
  <script src="script.js"></script>
