--- a/day2-Product_Design_Cart/details.html
+++ b/day2-Product_Design_Cart/details.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="deteails.css">
 </head>
 <body>
+  <button>Click me</button>
     <div class = "card-wrapper">
         <div class = "card">
           <!-- card left -->
