--- a/day2-Product_Design_Cart/index.html
+++ b/day2-Product_Design_Cart/index.html
@@ -1,102 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Design Cart</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
     <div class="product-card">
-        <div class="brand-new-tag">Brand New</div>
-        <img src="https://static-01.daraz.com.np/p/0c1b1a4c3c4ac7b1a7ee84fddf746e93.jpg" alt="Product Image" class="product-image">
-        <div class="product-info">
-            <h2 class="product-name">Black Leather Classic Martin Boots For Men</h2>
-            <p class="product-description">Timeless style meets unmatched comfort with our premium black leather Martin boots. Designed for durability and a sleek, versatile look, these boots are perfect for any occasion, offering superior quality and craftsmanship</p>
-            <div class="price-details">
-                <p class="product-price">$99.99</p>
-                <button class="details-button " id="openModalBtn">View Details</button>
-            </div>
+      <div class="brand-new-tag">Brand New</div>
+      <img
+        src="https://static-01.daraz.com.np/p/0c1b1a4c3c4ac7b1a7ee84fddf746e93.jpg"
+        alt="Product Image"
+        class="product-image"
+      />
+      <div class="product-info">
+        <h2 class="product-name">Black Leather Classic Martin Boots For Men</h2>
+        <p class="product-description">
+          Timeless style meets unmatched comfort with our premium black leather
+          Martin boots. Designed for durability and a sleek, versatile look,
+          these boots are perfect for any occasion, offering superior quality
+          and craftsmanship
+        </p>
+        <div class="price-details">
+          <p class="product-price">$99.99</p>
+          <button class="details-button" id="openModalBtn">View Details</button>
         </div>
-    </div> 
+      </div>
+    </div>
 
     <!-- pop model -->
     <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="card-wrapper">
-                <div class="card">
-                    <!-- card left -->
-                    <div class="product-imgs">
-                        <div class="img-display">
-                            <div class="img-showcase">
-                                <img src="https://static-01.daraz.com.np/p/0c1b1a4c3c4ac7b1a7ee84fddf746e93.jpg" alt="shoe image">
-                                <img src="https://d2ob0iztsaxy5v.cloudfront.net/product/144702/1447027020_zm.jpg" alt="shoe image">
-                                <img src="https://m.media-amazon.com/images/I/715r+eiFZWL._AC_SY535_.jpg" alt="shoe image">
-                                <img src="https://static-01.daraz.com.np/p/816578b4293c3b858a834e4db035d6f4.jpg" alt="shoe image">
-                            </div>
-                        </div>
-                        <div class="img-select">
-                            <div class="img-item">
-                                <a href="#" data-id="1">
-                                    <img src="https://static-01.daraz.com.np/p/0c1b1a4c3c4ac7b1a7ee84fddf746e93.jpg" alt="shoe image">
-                                </a>
-                            </div>
-                            <div class="img-item">
-                                <a href="#" data-id="2">
-                                    <img src="https://d2ob0iztsaxy5v.cloudfront.net/product/144702/1447027020_zm.jpg" alt="shoe image">
-                                </a>
-                            </div>
-                            <div class="img-item">
-                                <a href="#" data-id="3">
-                                    <img src="https://m.media-amazon.com/images/I/715r+eiFZWL._AC_SY535_.jpg" alt="shoe image">
-                                </a>
-                            </div>
-                            <div class="img-item">
-                                <a href="#" data-id="4">
-                                    <img src="https://static-01.daraz.com.np/p/816578b4293c3b858a834e4db035d6f4.jpg" alt="shoe image">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- card right -->
-                    <div class="product-content">
-                        <h2 class="product-title">Black Leather Classic Martin Boots For Men</h2>
-                        <a href="#" class="product-link">visit Martin store</a>
-                        <div class="product-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                            <span>4.7(21)</span>
-                        </div>
-                        <div class="product-price">
-                            <p class="last-price">Old Price: <span>$257.00</span></p>
-                            <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
-                        </div>
-                        <div class="product-detail">
-                            <h2>description</h2>
-                            <p>Timeless style meets unmatched comfort with our premium black leather Martin boots. Designed for durability and a sleek, versatile look, these boots are perfect for any occasion, offering superior quality and craftsmanship.</p>
-                            <ul>
-                                <li>Color: <span>Black</span></li>
-                                <li>Available: <span>in stock</span></li>
-                                <li>Category: <span>Shoes</span></li>
-                                <li>Shipping Area: <span>All over the world</span></li>
-                                <li>Shipping Fee: <span>Free</span></li>
-                            </ul>
-                        </div>
-                        <div class="purchase-info">
-                            <input type="number" min="0" value="1">
-                            <button type="button" class="btn">
-                                Add to Cart <i class="fas fa-shopping-cart"></i>
-                            </button>
-                        </div>
-                    </div>
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <div class="card-wrapper">
+          <div class="card">
+            <!-- card left -->
+            <div class="product-imgs">
+              <div class="img-display">
+                <div class="img-showcase">
+                  <img
+                    src="https://static-01.daraz.com.np/p/0c1b1a4c3c4ac7b1a7ee84fddf746e93.jpg"
+                    alt="shoe image"
+                  />
+                  <img
+                    src="https://d2ob0iztsaxy5v.cloudfront.net/product/144702/1447027020_zm.jpg"
+                    alt="shoe image"
+                  />
+                  <img
+                    src="https://m.media-amazon.com/images/I/715r+eiFZWL._AC_SY535_.jpg"
+                    alt="shoe image"
+                  />
+                  <img
+                    src="https://static-01.daraz.com.np/p/816578b4293c3b858a834e4db035d6f4.jpg"
+                    alt="shoe image"
+                  />
                 </div>
+              </div>
+              <div class="img-select">
+                <div class="img-item">
+                  <a href="#" data-id="1">
+                    <img
+                      src="https://static-01.daraz.com.np/p/0c1b1a4c3c4ac7b1a7ee84fddf746e93.jpg"
+                      alt="shoe image"
+                    />
+                  </a>
+                </div>
+                <div class="img-item">
+                  <a href="#" data-id="2">
+                    <img
+                      src="https://d2ob0iztsaxy5v.cloudfront.net/product/144702/1447027020_zm.jpg"
+                      alt="shoe image"
+                    />
+                  </a>
+                </div>
+                <div class="img-item">
+                  <a href="#" data-id="3">
+                    <img
+                      src="https://m.media-amazon.com/images/I/715r+eiFZWL._AC_SY535_.jpg"
+                      alt="shoe image"
+                    />
+                  </a>
+                </div>
+                <div class="img-item">
+                  <a href="#" data-id="4">
+                    <img
+                      src="https://static-01.daraz.com.np/p/816578b4293c3b858a834e4db035d6f4.jpg"
+                      alt="shoe image"
+                    />
+                  </a>
+                </div>
+              </div>
             </div>
+            <!-- card right -->
+            <div class="product-content">
+              <h2 class="product-title">
+                Black Leather Classic Martin Boots For Men
+              </h2>
+              <a href="#" class="product-link">visit Martin store</a>
+              <div class="product-rating">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span>4(21)</span>
+              </div>
+              <div class="product-price">
+                <p class="last-price">Old Price: <span>$257.00</span></p>
+                <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
+              </div>
+              <div class="product-detail">
+                <h2>description</h2>
+                <p>
+                  Timeless style meets unmatched comfort with our premium black
+                  leather Martin boots. Designed for durability and a sleek,
+                  versatile look, these boots are perfect for any occasion,
+                  offering superior quality and craftsmanship.
+                </p>
+                <ul>
+                  <li>Color: <span>Black</span></li>
+                  <li>Available: <span>in stock</span></li>
+                  <li>Category: <span>Shoes</span></li>
+                  <li>Shipping Area: <span>All over the world</span></li>
+                  <li>Shipping Fee: <span>Free</span></li>
+                </ul>
+              </div>
+              <div class="purchase-info">
+                <input type="number" min="0" value="1" />
+                <button type="button" class="btn">
+                  Add to Cart <i class="fas fa-shopping-cart"></i>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
- <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
