--- a/day2-Product_Design_Cart/index.html
+++ b/day2-Product_Design_Cart/index.html
@@ -116,7 +116,7 @@
                 <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
               </div>
               <div class="product-detail">
-                <h2>description</h2>
+                <h2>Product Details</h2>
                 <p>
                   Timeless style meets unmatched comfort with our premium black
                   leather Martin boots. Designed for durability and a sleek,
