--- a/day3-progress_bar/index.html
+++ b/day3-progress_bar/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="progress-container">
+        <div class="progress-bar" id="progress-bar"></div>
+        <div class="progress-steps">
+          <div class="step" data-step="1">Step 1</div>
+          <div class="step" data-step="2">Step 2</div>
+          <div class="step" data-step="3">Step 3</div>
+        </div>
+      </div>
+      <div class="buttons">
+        <button id="prevBtn">Previous</button>
+        <button id="nextBtn">Next</button>
+      </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
