--- a/day3-progress_bar/index.html
+++ b/day3-progress_bar/index.html
@@ -10,9 +10,9 @@
     <div class="progress-container">
         <div class="progress-bar" id="progress-bar"></div>
         <div class="progress-steps">
-          <div class="step" data-step="1">Step 1</div>
-          <div class="step" data-step="2">Step 2</div>
-          <div class="step" data-step="3">Step 3</div>
+          <div class="step" data-step="1">1</div>
+          <div class="step" data-step="2">2</div>
+          <div class="step" data-step="3">3</div>
         </div>
       </div>
       <div class="buttons">
