--- a/day3-progress_bar/index.html
+++ b/day3-progress_bar/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stepbar Progress</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="progress-container">
-        <div class="progress-bar" id="progress-bar"></div>
-        <div class="progress-steps">
-          <div class="step" data-step="1">1</div>
-          <div class="step" data-step="2">2</div>
-          <div class="step" data-step="3">3</div>
-        </div>
+      <div class="progress-bar-background"></div>
+      <div class="progress-bar" id="progress-bar"></div>
+      <div class="progress-steps">
+        <div class="step" data-step="1"></div>
+        <div class="step" data-step="2"></div>
+        <div class="step" data-step="3"></div>
       </div>
-      <div class="buttons">
-        <button id="prevBtn">Previous</button>
-        <button id="nextBtn">Next</button>
-      </div>
-    
+    </div>
+    <div class="buttons">
+      <button id="prevBtn">Previous</button>
+      <button id="nextBtn">Next</button>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
