--- a/day3-progress_bar/index.html
+++ b/day3-progress_bar/index.html
@@ -11,9 +11,9 @@
       <div class="progress-bar-background"></div>
       <div class="progress-bar" id="progress-bar"></div>
       <div class="progress-steps">
-        <div class="step" data-step="1"></div>
-        <div class="step" data-step="2"></div>
-        <div class="step" data-step="3"></div>
+        <div class="step" >1</div>
+        <div class="step" >2</div>
+        <div class="step" >3</div>
       </div>
     </div>
     <div class="buttons">
