--- a/day4-toast_notification/index.html
+++ b/day4-toast_notification/index.html
@@ -6,6 +6,10 @@
     <title>Toast Notification</title>
 </head>
 <body>
-    
+    <div id="toast-container"></div>
+
+    <button onclick="showToast('This is a success message!', 'success')">Show Success Toast</button>
+    <button onclick="showToast('This is an error message!', 'error')">Show Error Toast</button>
+    <button onclick="showToast('This is an info message!', 'info')">Show Info Toast</button>
 </body>
 </html>
