--- a/day4-toast_notification/index.html
+++ b/day4-toast_notification/index.html
@@ -12,5 +12,6 @@
     <button onclick="showToast('This is a success message!', 'success')">Show Success Toast</button>
     <button onclick="showToast('This is an error message!', 'error')">Show Error Toast</button>
     <button onclick="showToast('This is an info message!', 'info')">Show Info Toast</button>
+    <script src="script.js"></script>
 </body>
 </html>
