--- a/day4-toast_notification/index.html
+++ b/day4-toast_notification/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toast Notification</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div id="toast-container"></div>
 
-    <button onclick="showToast('This is a success message!', 'success')">Show Success Toast</button>
-    <button onclick="showToast('This is an error message!', 'error')">Show Error Toast</button>
-    <button onclick="showToast('This is an info message!', 'info')">Show Info Toast</button>
+    <button onclick="showToast('This is a success message!', 'success')">
+      Show Success Toast
+    </button>
+    <button onclick="showToast('This is an error message!', 'error')">
+      Show Error Toast
+    </button>
+    <button onclick="showToast('This is an info message!', 'info')">
+      Show Info Toast
+    </button>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
