--- a/day4-toast_notification/index.html
+++ b/day4-toast_notification/index.html
@@ -9,13 +9,13 @@
   <body>
     <div id="toast-container"></div>
 
-    <button onclick="showToast('This is a success message!', 'success')">
+    <button onclick="showToast('This is a success message!', 'success')" class="success">
       Show Success Toast
     </button>
-    <button onclick="showToast('This is an error message!', 'error')">
+    <button onclick="showToast('This is an error message!', 'error')" class="error">
       Show Error Toast
     </button>
-    <button onclick="showToast('This is an info message!', 'info')">
+    <button onclick="showToast('This is an info message!', 'info')" class="info">
       Show Info Toast
     </button>
     <script src="script.js"></script>
