--- a/day5-star rating/index.html
+++ b/day5-star rating/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Rating</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="star">
+        <div class="fa fa-star checked"></div>
+        <div class="fa fa-star checked"></div>
+        <div class="fa fa-star checked"></div>
+        <div class="fa fa-star checked"></div>
+        <div class="fa fa-star checked"></div>
+    </div>
     
 </body>
 </html>
