--- a/day5-star rating/index.html
+++ b/day5-star rating/index.html
@@ -18,6 +18,6 @@
         <div class="fa fa-star checked"></div>
         <div class="fa fa-star checked"></div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
