--- a/day5-star rating/index.html
+++ b/day5-star rating/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="star">
-        <div class="fa fa-star checked"></div>
-        <div class="fa fa-star checked"></div>
-        <div class="fa fa-star checked"></div>
-        <div class="fa fa-star checked"></div>
-        <div class="fa fa-star checked"></div>
+        <div class="fa fa-star "></div>
+        <div class="fa fa-star "></div>
+        <div class="fa fa-star "></div>
+        <div class="fa fa-star "></div>
+        <div class="fa fa-star "></div>
     </div>
     <script src="script.js"></script>
 </body>
