--- a/day6-darg_and_drop_file/index.html
+++ b/day6-darg_and_drop_file/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>File Upload</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="drop-zone" id="drop-zone">
+        <div class="drop-zone__prompt">Drop files here or click to upload</div>
+        <input type="file" class="drop-zone__input" id="file-input" multiple />
+      </div>
+      <div class="file-list" id="file-list"></div>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
