--- a/day6-darg_and_drop_file/index.html
+++ b/day6-darg_and_drop_file/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="drop-zone" id="drop-zone">
             <div class="drop-zone__prompt">Drop files here or click to upload</div>
-            <div class="drop-zone__prompt">+</div>
+            <div class="drop-zone__prompt plus">+</div>
             
             <input type="file" class="drop-zone__input" id="file-input" multiple>
         </div>
