--- a/day6-darg_and_drop_file/index.html
+++ b/day6-darg_and_drop_file/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div class="container">
-        <div class="drop-zone" id="drop-zone">
-            <div class="drop-zone__prompt">Drop files here or click to upload</div>
-            <div class="drop-zone__prompt plus" >+</div>
-            
-            <input type="file" class="drop-zone__input" id="file-input" multiple>
-        </div>
-        <div class="file-list" id="file-list"></div>
+      <div class="drop-zone" id="drop-zone">
+        <div class="drop-zone__prompt">Drop files here or click to upload</div>
+        <div class="drop-zone__prompt plus">+</div>
+
+        <input type="file" class="drop-zone__input" id="file-input" multiple />
+      </div>
+      <div class="file-list" id="file-list"></div>
     </div>
     <script src="script.js"></script>
   </body>
