--- a/day7-kyc/index.html
+++ b/day7-kyc/index.html
@@ -121,7 +121,7 @@
         id="successMessage"
         class="hidden mt-4 p-4 bg-green-100 text-green-800 rounded-lg"
       >
-        KYC Submitted Successfully!
+        Form Submitted Successfully!
       </div>
     </div>
 
